--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,39 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.0.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@eslint/js": "^9.30.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@mui/x-charts": "^8.9.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "axios": "^1.11.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "history": "^5.3.0",
+    "jest": "^30.0.5",
+    "jsdom": "^26.1.0",
+    "react-redux": "^9.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.7.1",
+    "react-slick": "^0.30.3",
+    "redux-thunk": "^3.1.0",
+    "tailwindcss": "^4.1.11",
+    "toolkit": "^1.5.4",
+    "vite": "^7.0.4",
+    "vitest": "^3.2.4"
   }
 }
