--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
